The Grinder 3.7 (not yet released)
----------------------------------

   The Java instrumenter supports selective instrumentation of a target
   object through an overloaded version of Test.record(). The full
   HTTPRequest interface can now be used with DCR instrumentation without
   requiring a replacement for the traditional instrumenter's __target__.


The Grinder 3.6
---------------

   The script engine API has been improved so that adding support
   for other languages is straightforward.

   Clojure is supported as an alternative test script language.

   Fulfil feature request 1849150 - Synchronisation points.
   Thanks to Aditya for the request.

   Fix bug 3406177 - DCR instrumented objects are not garbage
   collected. Thanks to Gary Mulder for the report and diagnostics.

   Fix bug 3413171 - TCPProxy broken in The Grinder 3.5. Thanks to
   Lonnie Choset for the report.

   Fix bug 3411728 - helloworld.py doesn't work with DCR
   instrumentation. Thanks to Jeff Vincent for the report.

   Fulfill feature request 3389028 - XSLTHelper API to control indent.
   Thanks to Jean-Francois Poilpret for the request.


The Grinder 3.5
---------------

   Fix bug 3008924 - Jython 2.5, assertion error if script has __del__
   method. Thank to Thomas Falkenberg for the report.

   Fix bug 2988755 - NPE in JythonScriptExecutionException
   .tracebackToMessage(). Thanks to Brian Runck for the report.

   Fix bug 2952023 - Cookie.parse should recognise "httponly" (lower
   case). Thanks to amachang for the report and the patch.

   Fix bug 3092275 - Incorrect TPS totals in output log. Thanks to
   Travis Bear for the report.

   Fix bug 3132643 - No statistics to report. This occurred if a clock
   went backwards in time during a test, and prevented the test from
   ever executing successfully again. Thanks to Wallander for the
   report.

   Fix bug 3132940 - Incorrect connect/DNS times when connect timeout