@@ -6,6 +6,9 @@ The Grinder 3.7 (not yet released)
    HTTPRequest interface can now be used with DCR instrumentation without
    requiring a replacement for the traditional instrumenter's __target__.
 
+   Fix bug 3006631 - Null pointer exeception when posting multipart
+   form data. Thanks to Edwin Clubb for the report.
+
 
 The Grinder 3.6
 ---------------
